before template changes
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@26816 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/plugin.properties
+++ b/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/plugin.properties
@@ -4,7 +4,7 @@ providerName=Sample Plugin Provider, Inc
 editorName=bpmn2 Diagram Editing
 context.description=bpmn2 Diagram Editing
 context.name=In bpmn2 Diagram Editor
-newWizardName=bpmn2 Diagram
+newWizardName=BPMN2 Diagram
 newWizardDesc=Creates bpmn2 diagram.
 
 initDiagramActionLabel=Initialize prd diagram file
