--- a/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/plugin.xml
+++ b/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/plugin.xml
@@ -4,7 +4,7 @@
 
    <extension point="org.eclipse.team.core.fileTypes" id="repo-ftype">
       <?gmfgen generated="true"?>
-      <fileTypes type="text" extension="prd"/>
+      <fileTypes type="text" extension="jbpmn"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.extension_parser" id="resource-factory">
@@ -15,13 +15,19 @@
       </parser>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.extension_parser">
+      <parser
+            type="jbpmn"
+            class="org.jboss.tools.bpmn2.util.Bpmn2ResourceFactoryImpl"/> 
+   </extension>
+
    <extension point="org.eclipse.ui.editors" id="gmf-editor">
-      <?gmfgen generated="true"?>
+      <?gmfgen generated="false"?>
       <editor
          id="org.jboss.tools.bpmn2.process.diagram.part.Bpmn2DiagramEditorID"
          name="%editorName"
-         icon="icons/obj16/Bpmn2DiagramFile.gif"
-         extensions="prd"
+         icon="icons/obj16/jbpm_icon_16.png"
+         extensions="jbpmn"
          default="true"
          class="org.jboss.tools.bpmn2.process.diagram.part.Bpmn2DiagramEditor"
          matchingStrategy="org.jboss.tools.bpmn2.process.diagram.part.Bpmn2MatchingStrategy"
@@ -40,22 +46,26 @@
    </extension>
 
    <extension point="org.eclipse.ui.newWizards" id="creation-wizard">
-      <?gmfgen generated="true"?>
+      <?gmfgen generated="false"?>
   	  <wizard
   	     name="%newWizardName"
-  	     icon="icons/obj16/Bpmn2DiagramFile.gif"
-  	     category="org.eclipse.ui.Examples"
+  	     icon="icons/obj16/jbpm_icon_16.png"
+  	     category="org.jboss.tools.jbpm"
   	     class="org.jboss.tools.bpmn2.process.diagram.part.Bpmn2CreationWizard"
   	     id="org.jboss.tools.bpmn2.process.diagram.part.Bpmn2CreationWizardID">
   	  	 <description>%newWizardDesc</description>  
       </wizard>
+     <category
+           id="org.jboss.tools.jbpm"
+           name="jBPM">
+     </category>
    </extension>
 
    <extension point="org.eclipse.ui.popupMenus" id="init-diagram-action">
       <?gmfgen generated="true"?>
       <objectContribution
             id="org.eclipse.bpmn2.diagram.InitDiagram"
-            nameFilter="*.bpmn2"
+            nameFilter="*.jbpmn"
             objectClass="org.eclipse.core.resources.IFile">
          <action
                label="%initDiagramActionLabel"
@@ -714,7 +724,7 @@
             <or>
 	           <and>
     	          <instanceof value="org.eclipse.core.resources.IFile"/>
-        	      <test property="org.eclipse.core.resources.extension" value="prd"/>
+        	      <test property="org.eclipse.core.resources.extension" value="jbpmn"/>
                </and>
                <instanceof value="org.jboss.tools.bpmn2.process.diagram.navigator.Bpmn2AbstractNavigatorItem"/>
             </or>
@@ -731,7 +741,7 @@
                <or>
 	              <and>
     	             <instanceof value="org.eclipse.core.resources.IFile"/>
-        	         <test property="org.eclipse.core.resources.extension" value="prd"/>
+        	         <test property="org.eclipse.core.resources.extension" value="jbpmn"/>
                   </and>
                   <instanceof value="org.jboss.tools.bpmn2.process.diagram.navigator.Bpmn2AbstractNavigatorItem"/>
                </or>
@@ -750,7 +760,7 @@
             <or>
 	           <and>
     	          <instanceof value="org.eclipse.core.resources.IFile"/>
-        	      <test property="org.eclipse.core.resources.extension" value="bpmn2"/>
+        	      <test property="org.eclipse.core.resources.extension" value="jbpmn"/>
                </and>
                <instanceof value="org.jboss.tools.bpmn2.process.diagram.navigator.Bpmn2DomainNavigatorItem"/>
             </or>
@@ -836,6 +846,16 @@
 
    <extension point="org.eclipse.ui.handlers" id="menu-handlers">
       <?gmfgen generated="true"?>
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.perspectiveExtensions">
+      <perspectiveExtension
+            targetID="org.eclipse.jdt.ui.JavaPerspective">
+         <newWizardShortcut
+               id="org.jboss.tools.bpmn2.process.diagram.part.Bpmn2CreationWizardID">
+         </newWizardShortcut>
+      </perspectiveExtension>
    </extension>
 
    <!-- optionally, specify keybindings -->
