--- a/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/plugin.xml
+++ b/bpmn/plugins/org.jboss.tools.bpmn2.process.diagram/plugin.xml
@@ -10,7 +10,7 @@
    <extension point="org.eclipse.emf.ecore.extension_parser" id="resource-factory">
       <?gmfgen generated="true"?>
       <parser
-         type="prd"
+         type="jbpmn"
          class="org.eclipse.gmf.runtime.emf.core.resources.GMFResourceFactory">
       </parser>
    </extension>
