refactor artifactIds and groupIds per GAV rules
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@26846 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/freemarker/site/pom.xml
+++ b/freemarker/site/pom.xml
@@ -1,14 +1,13 @@
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project
+ xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion> 
 	<parent>
-		
 		<groupId>org.jboss.tools</groupId>
 		<artifactId>org.jboss.tools.parent.pom</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>org.jboss.tools.freemarker</groupId>
-	<artifactId>freemarker.site</artifactId> 
-	<name>freemarker.site</name>
+	<artifactId>org.jboss.tools.freemarker.freemarker.site</artifactId> 
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>eclipse-update-site</packaging>
 </project>
