--- a/freemarker/features/pom.xml
+++ b/freemarker/features/pom.xml
@@ -1,14 +1,12 @@
 <project
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+ xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools.freemarker</groupId>
-	<artifactId>features</artifactId>
+	<artifactId>org.jboss.tools.freemarker.features</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>freemarker.features</name>
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.jboss.ide.eclipse.freemarker.feature</module>
 		<module>org.jboss.ide.eclipse.freemarker.test.feature</module>
 	</modules>
 </project>
-	
