--- a/freemarker/pom.xml
+++ b/freemarker/pom.xml
@@ -1,16 +1,16 @@
 <project
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools</groupId>
-	<artifactId>freemarker</artifactId>
+	<artifactId>org.jboss.tools.freemarker.all</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>freemarker.all</name>
 	<packaging>pom</packaging>
 	<modules>
-		<module>features</module>
 		<module>plugins</module>
+		<module>features</module>
+		<module>site</module>
 		<module>tests</module>
-                <module>site</module>
-        </modules>
+	</modules>
 </project>
 	
