--- a/freemarker/tests/pom.xml
+++ b/freemarker/tests/pom.xml
@@ -1,13 +1,11 @@
 <project
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+ xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools.freemarker</groupId>
-	<artifactId>tests</artifactId>
+	<artifactId>org.jboss.tools.freemarker.tests</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>freemarker.tests</name>
 	<modules>
 		<module>org.jboss.ide.eclipse.freemarker.test</module>
 	</modules>
 </project>
-	
