--- a/common/pom.xml
+++ b/common/pom.xml
@@ -1,16 +1,17 @@
 <project
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools</groupId>
-	<artifactId>common</artifactId>
-	<name>common.all</name>
+	<artifactId>org.jboss.tools.common.all</artifactId>
+	<name>org.jboss.tools.common.all</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>plugins</module>
 		<module>features</module>
-		<module>tests</module>
 		<module>site</module>
+		<module>tests</module>
 	</modules>
 </project>
 	
