--- a/common/site/pom.xml
+++ b/common/site/pom.xml
@@ -2,14 +2,13 @@
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion> 
 	<parent>
-	  
 	  <groupId>org.jboss.tools</groupId>
 	  <artifactId>org.jboss.tools.parent.pom</artifactId>
 	  <version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>org.jboss.tools.common</groupId>
-	<artifactId>common.site</artifactId>
-	<name>common.site</name>
+	<artifactId>org.jboss.tools.common.site</artifactId>
+	<name>org.jboss.tools.common.site</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>eclipse-update-site</packaging>
 </project>
