--- a/common/tests/pom.xml
+++ b/common/tests/pom.xml
@@ -2,8 +2,8 @@
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools.common</groupId>
-	<artifactId>tests</artifactId>
-	<name>common.tests</name>
+	<artifactId>org.jboss.tools.common.tests</artifactId>
+	<name>org.jboss.tools.common.tests</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
