use FQDN for poms
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@26863 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/drools/features/pom.xml
+++ b/drools/features/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools.drools</groupId>
 	<artifactId>org.jboss.tools.drools.features</artifactId>
-	<name>drools.features</name>
+	<name>org.jboss.tools.drools.features</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
