--- a/drools/plugins/pom.xml
+++ b/drools/plugins/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools.drools</groupId>
 	<artifactId>org.jboss.tools.drools.plugins</artifactId>
-	<name>drools.plugins</name>
+	<name>org.jboss.tools.drools.plugins</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
