--- a/drools/tests/pom.xml
+++ b/drools/tests/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>org.jboss.tools.drools</groupId>
 	<artifactId>org.jboss.tools.drools.tests</artifactId>
-	<name>drools.tests</name>
+	<name>org.jboss.tools.drools.tests</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
