use FQDNs and updated GAVs; reorder reactor
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@26864 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/bpel/plugins/pom.xml
+++ b/bpel/plugins/pom.xml
@@ -2,8 +2,8 @@
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools.bpel</groupId>
-	<artifactId>plugins</artifactId>
-	<name>bpel.plugins</name>
+	<artifactId>org.jboss.tools.bpel.plugins</artifactId>
+	<name>org.jboss.tools.bpel.plugins</name>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
