--- a/drools/tests/org.jboss.tools.drools.ui.bot.test/pom.xml
+++ b/drools/tests/org.jboss.tools.drools.ui.bot.test/pom.xml
@@ -10,7 +10,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<groupId>org.jboss.tools.drools.tests</groupId>
 	<artifactId>org.jboss.tools.drools.ui.bot.test</artifactId> 
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>eclipse-test-plugin</packaging>
+	<packaging>eclipse-plugin</packaging>
 	<build>
 		<plugins>
 			<plugin>
