https://jira.jboss.org/browse/JBIDE-6083
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@26982 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/common/plugins/org.jboss.tools.common.ui/plugin.properties
+++ b/common/plugins/org.jboss.tools.common.ui/plugin.properties
@@ -1,3 +1,5 @@
 #Properties file for org.jboss.tools.common.ui
 Bundle-Vendor.0 = JBoss by Red Hat
 Bundle-Name.0 = JBoss Tools Common UI Plug-in
+command.newEditor.sidebyside.description = Open New Editor Side By Side for Active Editor
+command.newEditor.sidebyside.name = New Editor (Side By Side)
