--- a/common/plugins/org.jboss.tools.common.ui/build.properties
+++ b/common/plugins/org.jboss.tools.common.ui/build.properties
@@ -2,4 +2,5 @@ source.. = src/
 bin.includes = META-INF/,\
                plugin.properties,\
                .,\
-               about.html
+               about.html,\
+               plugin.xml
