JBIDE-7660 ModeShape N&N Beta2: Attempt to add clarity to when the words "workspace" and "resource" are being used in the publishing wizard.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27013 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/src/org/jboss/tools/modeshape/rest/RestClientI18n.properties
@@ -91,7 +91,7 @@ publishJobUnpublishFinishedMsg = [{0}] Done unpublishing. Elapsed time: {1}. \n
 publishJobUnpublishName = ModeShape Unpublish [{0}]
 publishJobUnpublishTaskName = Unpublishing resources [{0}]
 
-publishPagePublishTitle = Publish the selected resources
+publishPagePublishTitle = Publish the selected files and folders
 publishPageLocationGroupTitle = Location
 publishPageMissingRepositoryStatusMsg = A repository must be selected
 publishPageMissingServerStatusMsg = A server must be selected
@@ -99,32 +99,32 @@ publishPageMissingWorkspaceStatusMsg = A workspace must be selected
 publishPageNewServerButton = New...
 publishPageNoAvailableRepositoriesStatusMsg = There are no repositories available on that server
 publishPageNoAvailableServersStatusMsg = A server must be created first
-publishPageNoAvailableWorkspacesStatusMsg = There are no workspaces available on that server and repository
+publishPageNoAvailableWorkspacesStatusMsg = There are no JCR workspaces available on that server and repository
 publishPageNoResourcesToPublishStatusMsg = There are no files that can be published
 publishPageNoResourcesToUnpublishStatusMsg = There are no files that can be unpublished
-publishPagePublishOkStatusMsg = Choose the server, repository, and workspace where the resources will be published. Click "Finish" to execute the publish operation.
-publishPagePublishResourcesLabel = These resources will be uploaded to the above specified ModeShape workspace:
+publishPagePublishOkStatusMsg = Choose the location of the JCR repository where your local files and folders will be published, and then click "Finish".
+publishPagePublishResourcesLabel = These files were selected and will be published:
 publishPageRecurseCheckBox = Recurse folders and projects
 publishPageRecurseCheckBoxToolTip = Add all files under folders recursively under selected projects and folders
 publishPageRecurseProcessingErrorMsg = Unexpected error processing resources. See log for more details.
-publishPageRepositoryLabel = Repository:
-publishPageRepositoryToolTip = The repository where the workspace is located
+publishPageRepositoryLabel = JCR Repository:
+publishPageRepositoryToolTip = The JCR repository where the JCR workspace is located
 publishPageServerLabel = Server:
-publishPageServerToolTip = The server where the repository is located
-publishPageUnpublishOkStatusMsg = Choose the server, repository, and workspace where the resources will be unpublished. Click "Finish" to execute the unpublish operation.
-publishPageUnpublishResourcesLabel = These resources will be removed from the above specified ModeShape workspace:
-publishPageUnpublishTitle = Unpublish the selected resources
-publishPageWorkspaceLabel = Workspace:
-publishPageWorkspacePublishToolTip = The workspace where the resources are being published
-publishPageWorkspaceUnpublishToolTip = The workspace where the resources are being unpublished
-publishPageWorkspaceAreaLabel = Workspace Area:
-publishPageWorkspaceAreaToolTip = Enter a ModeShape workspace path segment to prepend to each resource project path
+publishPageServerToolTip = The server where the JCR repository is located
+publishPageUnpublishOkStatusMsg = Choose the location of the JCR repository where the files will be unpublished, and then click "Finish".
+publishPageUnpublishResourcesLabel = These files were selected and will be unpublished:
+publishPageUnpublishTitle = Unpublish the selected files
+publishPageWorkspaceLabel = JCR Workspace:
+publishPageWorkspacePublishToolTip = The JCR workspace where the files are being published
+publishPageWorkspaceUnpublishToolTip = The JCR workspace where the files are being unpublished
+publishPageWorkspaceAreaLabel = Publish Area:
+publishPageWorkspaceAreaToolTip = The publish area within the JCR workspace where files will be published or unpublished 
 publishPageFinishedErrorMsg = Unexpected error in PublishPage after successfully finishing the publishing wizard.
 
 publishWizardPublishErrorMsg = Error Publishing
-publishWizardPublishTitle = Publish
+publishWizardPublishTitle = Publish to ModeShape
 publishWizardUnpublishErrorMsg = Error Unpublishing
-publishWizardUnpublishTitle = Unpublish
+publishWizardUnpublishTitle = Unpublish from ModeShape
 
 reconnectJobTaskName = Connecting to server "{0}"
 
