[JBIDE-7761] added "show in remote system explorer" to the context menu of the Cloud View
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27030 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -594,6 +594,9 @@
 			<separator
 				name="filters"
 				visible="true" />
+			<separator
+				name="remoteSysExplorer"
+				visible="true" />
 	</menuContribution>
 	<!-- instance commands -->
     <menuContribution
@@ -729,6 +732,19 @@
                label="%command.filterinstances.label"
                style="push"
                tooltip="%command.filterinstances.tooltip">
+         </command>
+      </menuContribution>
+	  <!-- remote system explorer -->
+      <menuContribution
+            allPopups="true"
+            locationURI="popup:org.jboss.tools.deltacloud.ui.views.DeltaCloudView?after=remoteSysExplorer">	
+         <command
+               commandId="org.jboss.tools.deltacloud.ui.showremotesysexplorer"
+               disabledIcon="icons/system_viewd.gif"
+               icon="icons/system_view.gif"
+               label="%command.showInRemoteSysExplorer"
+               style="push"
+               tooltip="%command.showInRemoteSysExplorer.tooltip">
          </command>
       </menuContribution>
     </extension>
