JBIDE-7769 - launch instance wizard taking too long... delay important bits
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27045 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -59,6 +59,7 @@ Progress.msg=Progress
 
 None.response=None
 Defaulted=Defaulted
+Loading.value=Loading...
 
 CreateInstanceError.title=Launch Instance Failure
 CreateInstanceError.msg=The attempt to launch instance: name={0}, image={1}, realm={2}, profile={3}
