JBIDE-7764 Wrong provider name, Modeshape: Changed provider to "JBoss by Red Hat" in 3 properties files.
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27060 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/modeshape/features/org.jboss.tools.modeshape.rest.feature/feature.properties
+++ b/modeshape/features/org.jboss.tools.modeshape.rest.feature/feature.properties
@@ -11,7 +11,7 @@
 #
 
 featureName = ModeShape JCR REST Tools for Eclipse
-featureProvider = JBoss by Red Hat, Inc.
+featureProvider = JBoss by Red Hat
 
 description = Provides a resource publishing and unpublishing capability to ModeShape repositories.
 
