--- a/modeshape/features/org.jboss.tools.modeshape.rest.sdk.feature/feature.properties
+++ b/modeshape/features/org.jboss.tools.modeshape.rest.sdk.feature/feature.properties
@@ -11,7 +11,7 @@
 #
 
 featureName = ModeShape JCR REST Tools for Eclipse SDK
-featureProvider = JBoss by Red Hat, Inc.
+featureProvider = JBoss by Red Hat
 
 # "updateSiteName" property - label for the update site
 updateSiteName = JBossTools Update Site
