--- a/modeshape/plugins/org.jboss.tools.modeshape.rest/plugin.properties
+++ b/modeshape/plugins/org.jboss.tools.modeshape.rest/plugin.properties
@@ -10,7 +10,7 @@
 # individual contributors.
 #
 bundleName = ModeShape REST Eclipse Publishing Plug-in
-bundleVendor = Red Hat, Inc.
+bundleVendor = JBoss by Red Hat
 contextMenu.label = ModeShape
 decorator.description = Decorates objects in the ModeShape View
 decorator.label = ModeShape View Decorator
