corrected build.properties
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27062 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/usage/plugins/org.jboss.tools.usage/build.properties
+++ b/usage/plugins/org.jboss.tools.usage/build.properties
@@ -8,5 +8,6 @@ bin.includes = .,\
                META-INF/,\
                OSGI-INF/
 src.includes = about.html,\
-               pom.xml
+               pom.xml,\
+               OSGI-INF/
 source.. = src/
