--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -40,7 +40,7 @@
          point="org.eclipse.ui.views.properties.tabbed.propertyContributor">
       <propertyContributor
             contributorId="org.jboss.tools.deltacloud.ui.views.CloudView"
-            typeMapper="org.jboss.tools.deltacloud.ui.views.cloud.CVTypeMapper">
+            typeMapper="org.jboss.tools.deltacloud.ui.views.cloud.DeltaCloudViewElementTypeMapper">
          <propertyCategory
                category="main"></propertyCategory>
       </propertyContributor>
@@ -65,7 +65,7 @@
                id="org.jboss.tools.deltacloud.ui.propertySection.advanced"
                tab="cloudview.advancedTab">
             <input
-                  type="org.jboss.tools.deltacloud.ui.views.cloud.CloudViewElement">
+                  type="org.jboss.tools.deltacloud.ui.views.cloud.DeltaCloudViewElement">
             </input>
          </propertySection>
       </propertySections>
@@ -116,7 +116,7 @@
 	                 variable="selection">
 				        <iterate>
 					           <instanceof
-					                 value="org.jboss.tools.deltacloud.ui.views.cloud.CloudViewElement">
+					                 value="org.jboss.tools.deltacloud.ui.views.cloud.DeltaCloudViewElement">
 					           </instanceof>
 				        </iterate>
                </with>
@@ -136,7 +136,7 @@
                      variable="selection">
 					<iterate>
 	               		<instanceof
-	                	     value="org.jboss.tools.deltacloud.ui.views.cloud.CloudViewElement">
+	                	     value="org.jboss.tools.deltacloud.ui.views.cloud.DeltaCloudViewElement">
 	               		</instanceof>
 	               	</iterate>
                </with>
@@ -158,7 +158,7 @@
 						<count value="+" />
 						<iterate>
 		               		<instanceof
-		                		value="org.jboss.tools.deltacloud.ui.views.cloud.CloudViewElement">
+		                		value="org.jboss.tools.deltacloud.ui.views.cloud.DeltaCloudViewElement">
 		               		</instanceof>
 		               	</iterate>
 		            </and>
@@ -299,7 +299,7 @@
 	                     variable="selection">
 						<iterate>
 		               		<instanceof
-		                	     value="org.jboss.tools.deltacloud.ui.views.cloud.CloudViewElement">
+		                	     value="org.jboss.tools.deltacloud.ui.views.cloud.DeltaCloudViewElement">
 		               		</instanceof>
 		               	</iterate>
 	               </with>
@@ -675,7 +675,7 @@
                      variable="selection">
 					<iterate>
 	               		<instanceof
-	                	     value="org.jboss.tools.deltacloud.ui.views.cloud.CVImageElement">
+	                	     value="org.jboss.tools.deltacloud.ui.views.cloud.ImageViewElement">
 	               		</instanceof>
 	               	</iterate>
                </with>
@@ -699,11 +699,11 @@
 					<iterate>
 				        <and>
 				           <instanceof
-				                 value="org.jboss.tools.deltacloud.ui.views.cloud.CloudViewElement">
+				                 value="org.jboss.tools.deltacloud.ui.views.cloud.DeltaCloudViewElement">
 				           </instanceof>
 				           <not>
 				              <instanceof
-				                    value="org.jboss.tools.deltacloud.ui.views.cloud.CVImageElement">
+				                    value="org.jboss.tools.deltacloud.ui.views.cloud.ImageViewElement">
 				              </instanceof>
 				           </not>
 				        </and>
@@ -870,7 +870,7 @@
   <extension
         point="org.eclipse.core.runtime.adapters">
      <factory
-           adaptableType="org.jboss.tools.deltacloud.ui.views.cloud.CloudViewElement"
+           adaptableType="org.jboss.tools.deltacloud.ui.views.cloud.DeltaCloudViewElement"
            class="org.jboss.tools.deltacloud.ui.adapter.CloudViewElementAdapterFactory">
         <adapter
               type="org.jboss.tools.deltacloud.core.DeltaCloudInstance">
