[JBIDE-7834] simplified binding, fixed find image by id (moved implementation to DeltaCloud)
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27240 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/src/org/jboss/tools/internal/deltacloud/ui/wizards/WizardMessages.properties
@@ -79,7 +79,7 @@ ErrorCouldNotOpenBrowser.text=Could not open url \"{0}\"in Browser
 ErrorInvalidURL.text=URL specified is invalid
 ErrorNonCloudURL.text=URL specified is not a valid Delta-cloud address
 ErrorInvalidPem.text=File specified is not a valid existing key
-ErrorImageIdNotFound.text = No existing image with specified id can be found
+ErrorImageIdNotFound.text = Could not find image with id \"{0}\"
 ErrorMustProvideName.text=A name must be specified
 ErrorMustProvideKeyName.text=A key name must be specified
 ErrorMustProvideImageId.text=An image id must be specified
