--- a/deltacloud/plugins/pom.xml
+++ b/deltacloud/plugins/pom.xml
@@ -3,12 +3,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.tools.deltacloud</groupId>
 	<artifactId>plugins</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<name>deltacloud.plugins</name>
 	<packaging>pom</packaging>
 	<modules>
 		<module>org.jboss.tools.deltacloud.ui</module>
 		<module>org.jboss.tools.deltacloud.core</module>
+		<module>org.jboss.tools.deltacloud.as</module>
 		<module>org.jboss.tools.deltacloud.docs</module>
 	</modules>
 </project>
