--- a/usage/tests/org.jboss.tools.usage.test/pom.xml
+++ b/usage/tests/org.jboss.tools.usage.test/pom.xml
@@ -9,7 +9,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<groupId>org.jboss.tools.usage.tests</groupId>
 	<artifactId>org.jboss.tools.usage.test</artifactId> 
 	<version>1.0.0-SNAPSHOT</version>
-	<packaging>eclipse-plugin</packaging>
+	<packaging>eclipse-test-plugin</packaging>
 	<properties>
 		<emma.filter/>
 		<emma.instrument.bundles/>
