--- a/maven/features/org.jboss.tools.maven.portlet.feature/feature.properties
+++ b/maven/features/org.jboss.tools.maven.portlet.feature/feature.properties
@@ -24,7 +24,7 @@ providerName=JBoss by Red Hat
 updateSiteName=JBossTools Update Site
 
 # "description" property - description of the feature
-description=JBoss Maven Seam Integration
+description=JBoss Maven Portlet Integration
 
 # "copyright" property - text of the "Feature Update Copyright"
 copyright=Copyright (c) 2010 JBoss by Red Hat and others.\n\
