JBIDE-6214 Support project example with no Eclipse metadata, only pom.xml, in zip
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27379 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/examples/plugins/org.jboss.tools.community.project.examples/plugin.properties
+++ b/examples/plugins/org.jboss.tools.community.project.examples/plugin.properties
@@ -1,4 +1,5 @@
 BundleVendor = JBoss by Red Hat
 BundleName = JBoss Tools Community Project Examples
 JBoss_Tools_Community_Examples = JBoss Tools 3.1 Community Examples
+JBoss_Tools_Community_Maven_Examples = JBoss Tools 3.2 Community Maven Examples
 JBoss_Tools_Community_BPEL_Examples=JBoss Tools Community BPEL Examples
