--- a/maven/plugins/pom.xml
+++ b/maven/plugins/pom.xml
@@ -14,6 +14,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<module>org.jboss.tools.maven.cdi</module>
 		<module>org.jboss.tools.maven.hibernate</module>
 		<module>org.jboss.tools.maven.portlet</module>
+		<module>org.jboss.tools.maven.project.examples</module>
 	</modules>
 </project>
 	
