[JBIDE-7864] added hasImages property tester, rename CreateInstanceHandler2 to CreateInstanceFromAnyImage,renamed CreateInstanceHandler to CreateInstanceFromSpecificImage
git-svn-id: https://svn.jboss.org/repos/jbosstools/trunk@27396 a97e2381-89e5-4abb-bab3-167db6db766c

--- a/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.ui/plugin.xml
@@ -42,7 +42,8 @@
             contributorId="org.jboss.tools.deltacloud.ui.views.CloudView"
             typeMapper="org.jboss.tools.deltacloud.ui.views.cloud.DeltaCloudViewElementTypeMapper">
          <propertyCategory
-               category="main"></propertyCategory>
+               category="main">
+         </propertyCategory>
       </propertyContributor>
    </extension>
    <extension
