--- a/deltacloud/plugins/org.jboss.tools.deltacloud.integration/.project
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.integration/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.jboss.tools.deltacloud.as</name>
+	<name>org.jboss.tools.deltacloud.integration</name>
 	<comment></comment>
 	<projects>
 	</projects>
