--- a/deltacloud/plugins/org.jboss.tools.deltacloud.integration/pom.xml
+++ b/deltacloud/plugins/org.jboss.tools.deltacloud.integration/pom.xml
@@ -7,7 +7,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	  <version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<groupId>org.jboss.tools.deltacloud.plugins</groupId>
-	<artifactId>org.jboss.tools.deltacloud.as</artifactId> 
+	<artifactId>org.jboss.tools.deltacloud.integration</artifactId> 
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>eclipse-plugin</packaging>
 </project>
